--- a/public/resume.html
+++ b/public/resume.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!-- My stylesheet -->
 <link rel="stylesheet" href="css/resume_style.css">
 </head>
+
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-default">
@@ -23,15 +25,15 @@
         </div> <!-- end contact info -->
 
         <!-- links nav -->
-        <div class="links">
-            <ul class="nav navbar-nav navbar-right">
+        <div>
+            <ul class="nav navbar-nav navbar-right links">
                 <li><a href="#">About me</a></li>
                 <li><a href="#">Work history</a></li>
                 <li><a href="#">Portfolio</a></li>
             </ul>
         </div> <!-- end links nav -->
     </div>
-</nav>
+</nav> <!-- End nav bar -->
 
     <div class="container">
         <!-- about me -->
@@ -40,34 +42,116 @@
             <div class="col-md-8 summary">
                 <h3>Summary of Qualifications</h3>
                 <p>Customer-focused, result-oriented leader with experience in a fast-paced work environment. Thoughtful decision-maker experienced in balancing varied priorities. Tactful communicator, detail-oriented, self-motivated, versatile, hardworking, adaptable and resourceful.</p>
+                    <!-- Nest education here col-md-12 -->
+                    <div class="row education">
+                        <div class="col-md-12">
+                            <h3>Education</h3>
+                            <p class="codeup"><a href="http://codeup.com" target="_blank">Codeup</a> San Antonio, Full-Stack Bootcamp, 2016.<p>
+                            <p>University of Texas at Austin, B.A. History, 2009.</p>
+                        </div>
+                    </div> <!--End education -->
             </div>
 
             <!-- Technologies -->
             <div class="col-md-4 technologies">
                 <h3>Technologies</h3>
-                <ul class="list-unstyled">
+                <!-- in table form -->
+                <table class="table table-striped">
+                    <tr>
+                        <td>HTML</td>
+                        <td><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></li></td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></td>
+                    <tr>
+                        <td>Javascript</td>
+                        <td><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></td>
+                    </tr>
+                    <tr>
+                        <td>jQuery</td>
+                        <td><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></td>
+                    </tr>
+                    <tr>
+                        <td>Apache</td>
+                        <td><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></td>
+                    </tr>
+                    <tr>
+                        <td>MySQL</td>
+                        <td><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></td>
+                    </tr>
+                    <tr>
+                        <td>PHP</td>
+                        <td><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></td>
+                    </tr>
+                </table>
+                <!-- in list form -->
+           <!-- <ul class="list-unstyled">
                     <li>HTML <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
                     <li>CSS <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
-                    <li>Bootstrap <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
+                    <li>Javascript <span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
+                    <li>jQuery <span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
+                    <li>Apache <span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
+                    <li>MySQL <span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
+                    <li>PHP <span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span></li>
                 </ul>
+            -->
             </div> <!-- End technologies -->
         </div> <!--End about me section -->
 
-        <!-- Begin education -->
-        <div class="row education">
-            <div class="col-md-12">
-                <h3>Education</h3>
-                <p class="codeup"><a href="http://codeup.com" target="_blank">Codeup</a> San Antonio, Full-Stack Bootcamp, 2016.<p>
-                <p>University of Texas at Austin, B.A. History, 2009.</p>
-
-
-
-            </div>
-        </div>
-        <!-- End education -->
 
         <!-- Begin jumbotron -->
+    </div>
+    <div class="container-fluid">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+          </ol>
 
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="img/bluebonnets.jpeg" alt="bluebonnets">
+              <div class="carousel-caption">
+                Texas native
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/coop.jpg" alt="University Coop">
+              <div class="carousel-caption">
+                Worked 13 years at the University Coop
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/UT_Austin.jpg" alt="University of Texas at Austin">
+              <div class="carousel-caption">
+                Completed History degree at UT Austin
+              </div>
+            </div>
+            <div class="item">
+              <img src="img/mission.jpg" alt="Mission in San Antonio">
+              <div class="carousel-caption">
+                Moved to San Antonio in late 2014
+              </div>
+            </div>
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+    </div>
+    <div class="container">
         <!-- End jumbotron -->
 
         <!-- Work history begins -->
