finished great britain, as best I could

--- a/public/flags.html
+++ b/public/flags.html
@@ -86,7 +86,7 @@
     }
 
     .british {
-        background-color: blue;
+        background-color: rgb(0,36,125);
     }
 
     .bar1 { /*white descending*/
@@ -113,7 +113,7 @@
         width: 280px;
         height:18px;
         transform: skewY(30deg);
-        background-color: red;
+        background-color: rgb(207,20,43);
         position: relative;
         top: 12px;
         left: -2px;
@@ -123,29 +123,65 @@
         width: 30px;
         height:170px;
         transform: skewX(-60deg);
-        background-color: red;
+        background-color: rgb(207,20,43);
         position: relative;
         top: -90px;
         left: 436px;
     }
-        .bar5 { /*red top right*/
+    .bar5 { /*red top right*/
         width: 30px;
         height:170px;
         transform: skewX(-60deg);
-        background-color: red;
+        background-color: rgb(207,20,43);
         position: relative;
         top: -70px;
         left: 125px;
     }
 
-        .bar6 { /*red bottom right*/
+    .bar6 { /*red bottom right*/
         width: 280px;
         height:18px;
         transform: skewY(30deg);
-        background-color: red;
+        background-color: rgb(207,20,43);
         position: relative;
-        top: 167px;
+        top: -172px;
         left: 321px;
+    }
+
+    .white_vert {
+        width: 120px;
+        height: 360px;
+        background-color: white;
+        position: relative;
+        top: -448px;
+        left: 240px;
+    }
+
+    .white_horiz {
+        width: 600px;
+        height: 120px;
+        background-color: white;
+        position: relative;
+        top: -685px;
+        left: 0px;
+    }
+
+    .red_vert {
+        height: 360px;
+        width: 72px;
+        position: relative;
+        background-color: rgb(207,20,43);
+        top: -928px;
+        left: 264px;
+    }
+
+    .red_horiz {
+        height: 72px;
+        width: 600px;
+        position: relative;
+        background-color: rgb(207,20,43);
+        top: -1143px;
+        left: 0px;
     }
 
 
@@ -260,7 +296,13 @@
         <div class="bar4"></div>
         <div class="bar5"></div>
         <div class="bar6"></div>
+        <div class="white_vert"></div>
+        <div class="white_horiz"></div>
+        <div class="red_vert"></div>
+        <div class="red_horiz"></div>
     </div>
+    
+
 
 
 </body>
