--- a/public/css_box_model.html
+++ b/public/css_box_model.html
@@ -61,7 +61,7 @@
 
 <body>
 <h1><a href="https://en.wikipedia.org/wiki/Visible_spectrum" target="_blank" title="Visit wikipedia">Visible Spectrum Wavelengths</a></h1>
-<div id="red" class="box">620-750</div>
+<div id="red" class="box"></div>
 <div id="orange" class="box">590-620</div>
 <div id="yellow" class="box">570-590</div>
 <div id="green" class="box">495-570</div>
