--- a/public/resume.html
+++ b/public/resume.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
         <!-- Left-side contact info and toggle button -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsing_navbar" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -32,7 +32,7 @@
             </div>
 
         <!-- Right-side links that will be toggled -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">          
+            <div class="collapse navbar-collapse" id="collapsing_navbar">          
                 <ul class="nav navbar-nav navbar-right links">
                     <li><a href="#">About me</a></li>
                     <li><a href="#">Work history</a></li>
@@ -73,7 +73,7 @@
                         <td><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></td>
                     <tr>
                         <td>Javascript</td>
-                        <td><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></td>
+                        <td><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-  empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></td>
                     </tr>
                     <tr>
                         <td>jQuery</td>
@@ -110,13 +110,13 @@
         <!-- Begin jumbotron -->
     </div>
     <div class="container-fluid">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <div id="carousel_locations" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+            <li data-target="#carousel_locations" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel_locations" data-slide-to="1"></li>
+            <li data-target="#carousel_locations" data-slide-to="2"></li>
+            <li data-target="#carousel_locations" data-slide-to="3"></li>
           </ol>
 
           <!-- Wrapper for slides -->
@@ -148,11 +148,11 @@
           </div>
 
           <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <a class="left carousel-control" href="#carousel_locations" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <a class="right carousel-control" href="#carousel_locations" role="button" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
