--- a/public/dom-query-js.html
+++ b/public/dom-query-js.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1 id="main-header">Hello World!</h1>
+    <button id="btn1">Change main header</button>
     <ul>
         <li data-dbid="1">Item 1</li>
         <li data-dbid="2">Item 2</li>
@@ -13,7 +14,9 @@
         <li data-dbid="4">Item 4</li>
         <li data-dbid="5">Item 5</li>
     </ul>
+    <button id="btn3">Change color of list items</button>
     <h2 id="sub-header">Hello Again.</h2>
+    <button id="btn2">Change color of subheader</button>
     <p class="sub-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -23,55 +26,80 @@
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
         culpa qui officia deserunt mollit anim id est laborum.
     </p>
+    <p class="sub-paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        aliquip ex ea commodo consequat. Duis aute irure dolor in
+        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <button id="btn4">Change paragraph</button>
+
 
     <script>
         "use strict";
         (function() {
-            // TODO: Uncomment next line and get the main header element by id
+            // Get the main header element by id
             var mainHeader = document.getElementById("main-header");
             console.log(mainHeader.innerHTML);
 
-            // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-            mainHeader.innerHTML = "JavaScript is Cool";
-            console.log(mainHeader.innerHTML);
+            // function will change main header text
+            var coolJS = function (event) {
+                mainHeader.innerHTML = "JavaScript is Cool";
+                console.log(mainHeader.innerHTML);
 
-            // TODO: Uncomment the next line and get the sub header element by id
+            }
+            // assign function to btn1
+            document.getElementById("btn1").addEventListener("click",coolJS);
+
+            // retrieve sub header element by id            
             var subHeader = document.getElementById("sub-header");
             console.log(subHeader.innerHTML);
 
-            // TODO: Set the text color of subHeader to blue
-            subHeader.style.color = "blue";
+            // function will change subheading to blue
+            var blueSubH = function (event) {
+                subHeader.style.color = "blue";        
+            }
 
+            // assign function to the btn2
+            document.getElementById("btn2").addEventListener("click",blueSubH);
 
-            // TODO: Uncomment the next line and get all list items
+            // Get all list items
             var listItems = document.getElementsByTagName("li");
             for (var i=0; i<listItems.length; i++) {
                 console.log(listItems[i].innerHTML);    
             }
 
-            // TODO: Set text color on every other list item to grey
-            for (var i=0; i<listItems.length; i++) {
-                if (i % 2 == 1) {
-                    listItems[i].style.color = "grey";
-                }
-            }
-            // TODO: Set text color of li with dbid = 1 to blue
-            for (var i=0; i<listItems.length; i++) {
-                if (listItems[i].getAttribute("data-dbId") == "1") {
-                    listItems[i].style.color = "blue";
+            // Function will set text color on every other list item to grey and set text color of li with dbid = 1 to blue
+            var listChange = function (event) {
+                for (var i=0; i<listItems.length; i++) {
+                    if (listItems[i].getAttribute("data-dbId") == "1") {
+                        listItems[i].style.color = "blue";
+                    } else if (i % 2 == 1) {
+                        listItems[i].style.color = "grey";
+                    }
                 }
             }
 
-            // TODO: Uncomment the next line and get all elements with class name sub-paragraph
+            // assign function listChange to btn3
+            document.getElementById("btn3").addEventListener("click", listChange);
+
+            // Get all elements with class name sub-paragraph
             var subParagraphs = document.getElementsByClassName("sub-paragraph");
             for (var i=0; i<subParagraphs.length; i++) {
                 console.log(subParagraphs[i].innerHTML);
             }
-            // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-            subParagraphs[0].innerHTML = "Mission Accomplished! (more or less)";
-            for (var i=0; i<subParagraphs.length; i++) {
-                console.log(subParagraphs[i].innerHTML);
+
+            // Function will change the text in the first sub paragraph to "Mission Accomplished!"
+            var changeP1 = function (event) {
+                subParagraphs[0].innerHTML = "Mission Accomplished! (more or less)";
+                console.log(subParagraphs[0].innerHTML);
             }
+
+            // assign function changeP1 to btn 4
+            document.getElementById("btn4").addEventListener("click", changeP1);
         })();
     </script>
 </body>
