--- a/public/google_maps_api.html
+++ b/public/google_maps_api.html
@@ -14,7 +14,7 @@
         font-size: 30px;
     }
 
-    #street-view {
+    #apg-street {
         width: 900px;
         height: 400px;
     }
@@ -25,7 +25,7 @@
     <h1>Austin Pizza Garden</h1>
 
     <div id="map-canvas"></div>
-    <div id="street-view"></div>
+    <div id="apg-street"></div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArBHPSziquESvHxEsxL-RBt8VZYTWZ5_8"></script>
 <script>
@@ -45,10 +45,12 @@
 
     };
 
+    
+
     var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
 
-// set marker
-    var apg_location = { lat: 30.235772, lng: -97.859056};
+// set marker apg
+    var apg_location = { lat: 30.235772, lng: -97.859056 };
 
     var apg_marker = new google.maps.Marker({
         position: apg_location,
@@ -60,13 +62,19 @@
         content: '<a href="http://www.austin-pizza-garden.com/" target="_blank">Austin Pizza Garden</a>'
     });
 
-    apg_infowindow.open(map, apg_marker);
+    //event listener to open infowindow
+    apg_marker.addListener("click", function() {
+        apg_infowindow.open(map, apg_marker);
+        map.panTo(apg_location);
+    });
+    
 
 // traffic
     var trafficLayer = new google.maps.TrafficLayer();
     trafficLayer.setMap(map);
 
-    var panorama = new google.maps.StreetViewPanorama(document.getElementById("street-view"), {
+//street-level view in separate div
+    var panorama = new google.maps.StreetViewPanorama(document.getElementById("apg-street"), {
         position: apg_location,
         pov: {
             heading: 0,
@@ -75,21 +83,13 @@
     });
 
 
-    // use Geocoder to find center
     /*
-    var address = "6266 W Hwy 290, Austin, TX 78735"
-    ;
 
-    var geocoder = new google.maps.Geocoder();
+    apg lat: 30.235772, lng: -97.859056
+    hoovers lat: 30.284316, lng: -97.720510
+    1st wok lat: 30.207929, lng: -97.781150 
 
-    geocoder.geocode({ "address": address }, function(results, status) {
-        if (status == google.maps.GeocoderStatus.OK) {
-            map.setCenter(results[0].geometry.location);
-        } else {
-            // error if not found
-            alert("Geocoding was not successful - STATUS: " + status);
-        }
-    }); */
+    */
 
 
 
