--- a/public/jquery_exercise.html
+++ b/public/jquery_exercise.html
@@ -40,7 +40,10 @@
 <script>
 
     $(document).ready(function() {
-        $('.codeup').css('border', '1px red solid');
+        $('li').css('font-size', '20px');
+        $("h1, p, li").css("background-color", "yellow");
+        var contents = $("h1").html();
+        alert(contents);
     });
         
 
