--- a/public/jquery_exercise.html
+++ b/public/jquery_exercise.html
@@ -40,9 +40,20 @@
 <script>
 
     $(document).ready(function() {
-        $("h1, p, li").css("background-color", "yellow");
+        $("h1").click(function() {
+            $(this).css("background-color", "black");
+            });
+        $("p").dblclick(function() {
+            $(this).css("font-size", "18px");
+        });
+        $("li").hover(
+            function () {
+                $(this).css("color", "red");
+            }, function() {
+                $(this).css("color", "");
+            }
+        );
     });
-        
 
 </script>
 </body>
