--- a/public/weather_map.html
+++ b/public/weather_map.html
@@ -4,6 +4,12 @@
     <title>Weather in San Antonio</title>
     <meta charset="utf=8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <style>
+        #map-space{
+            width:600px;
+            height:400px;
+        }
+    </style>
 </head>
 <body>
 <div class="container-fluid">
@@ -19,16 +25,32 @@
 
         </div>
     </div>
+
+    <!-- Map in this row below -->
     <div class="row">
         <div class="col-md-12" id="map-space">
             
         </div>
     </div>
 </div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEvzFqeOuQEyxPrW-drYZ0ORhWdffEs_w"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <script>
 (function() {
 
+
+// set map options
+var mapOptions = {
+    zoom: 17,
+    center: {
+        lat: 29.600413,
+        lng: -98.418341
+    }
+}
+// render the map
+var map = new google.maps.Map(document.getElementById("map-space"), mapOptions);
+
+// get Weather API
 $.get("http://api.openweathermap.org/data/2.5/forecast/daily", {
     APPID: "1a2500a8754b15cdaa2e73a0b2b3b26e",
     q: "San Antonio, TX",
@@ -36,7 +58,7 @@ $.get("http://api.openweathermap.org/data/2.5/forecast/daily", {
     cnt: 3
 }).done(function(data) {
     console.log(data);
-
+    // create variables for each of three days
     for(var i=0; i < data.list.length; i++) {
     var morn = data.list[i].temp.morn;
     var max = data.list[i].temp.max;
