--- a/public/weather_map.html
+++ b/public/weather_map.html
@@ -38,22 +38,40 @@
 <script>
 (function() {
 
+// map beginning coordinates
+var coordinates = {lat: 29.426791, lng: -98.489602}
 
 // set map options
 var mapOptions = {
-    zoom: 17,
-    center: {
-        lat: 29.600413,
-        lng: -98.418341
+    zoom: 8,
+    center: coordinates,
+    mapTypeId: google.maps.MapTypeId.HYBRID
     }
-}
+
+
 // render the map
 var map = new google.maps.Map(document.getElementById("map-space"), mapOptions);
+
+// set map marker
+var marker = new google.maps.Marker({
+    position: coordinates,
+    map: map,
+    draggable:true
+});
+
+// listen for movement of marker
+marker.addListener("dragend", function() {
+    coordinates = marker.getPosition();
+    map.panTo(marker.getPosition());
+    console.log("new position: " + coordinates + typeof coordinates);
+});
 
 // get Weather API
 $.get("http://api.openweathermap.org/data/2.5/forecast/daily", {
     APPID: "1a2500a8754b15cdaa2e73a0b2b3b26e",
-    q: "San Antonio, TX",
+    // q: "San Antonio, TX",
+    lat: coordinates.lat,
+    lon: coordinates.lng,
     units: "imperial",
     cnt: 3
 }).done(function(data) {
@@ -66,6 +84,7 @@ $.get("http://api.openweathermap.org/data/2.5/forecast/daily", {
     var weatherIcon = data.list[i].weather.icon;
     var weatherCode = data.list[i].weather.id;
     var weatherDesc = data.list[i].weather.main;
+    // figure out the days in the box/infowindow, whatever
     var d = new Date();
     var daysArray = new Array(7);
     daysArray[0]= "Sunday";
