--- a/public/weather_map.html
+++ b/public/weather_map.html
@@ -5,11 +5,12 @@
 <head>
     <title>Weather in San Antonio and elsewhere</title>
     <meta charset="utf=8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <style>
         #map-space{
-            width:600px;
+            width:100%;
             height:400px;
         }
 
